package NMango;

message TDownloadResult {
    enum TDownloadState {
        OK = 1;
        TRANSIENT_ERROR = 2;
        PERMANENT_ERROR = 3;
    }

    required string Url = 1;
    required TDownloadState State = 2;
    required uint64 Timestamp = 3;
    optional bytes Content = 4;
    repeated TRedirectInfo Redirects = 5;
    optional uint32 HttpCode = 6;
    optional bool IsFinal = 7;
    optional uint32 MimeType = 8;
    optional bool IsExpandedFromTinyLink = 9;
    optional uint64 KiwiAddTime = 10;
}

message TRedirectInfo {
    required string Source = 1;
    required string Destination = 2;
}

message TDownloadResultPack {
    repeated TDownloadResult Results = 1;
}

message TDlJob {
    enum EType {
        TO_EXPAND = 1;
        TO_RETRIEVE = 2;
    }

    enum EOriginType {
        OT_COMMON = 1;
        OT_REDIRECT = 2;
        OT_TINY_LINK = 3;
    }

    message TDlJobState {
        optional uint32 Count = 1 [default = 0]; // for redirects
        optional fixed32 Timestamp = 2; // for last try 
        optional uint32 HttpCode = 3;
    }

    required string Url = 1;
    required EType JobType = 2 [default = TO_RETRIEVE];
    optional TDlJobState State = 3;
    optional EOriginType Origin = 4 [default = OT_COMMON];
    repeated TRedirectInfo Redirects = 5;
    optional uint64 CreateTimestamp = 6;
    optional TDlPriority PriorityData = 7;
}

message TDlPriority {
    required string Url = 1;
    required double Priority = 2;
}


